--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@supabase/supabase-js": "^2.10.0",
     "@tanstack/react-query": "^4.26.0",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~48.0.5",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
